--- a/package.json
+++ b/package.json
@@ -9,36 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "tamagui": "1.74.8",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@tamagui/font-inter": "1.74.8",
+    "@tamagui/lucide-icons": "^1.94.4",
+    "@tamagui/react-native-media-driver": "1.74.8",
     "@tamagui/shorthands": "1.74.8",
     "@tamagui/themes": "1.74.8",
-    "@tamagui/react-native-media-driver": "1.74.8",
-    "expo-font": "~11.10.2",
-    "@react-navigation/native": "^6.1.7",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@react-navigation/stack": "^6.3.17",
-    "@expo/vector-icons": "^14.0.0",
-    "expo-splash-screen": "~0.26.4",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "react-native-reanimated": "~3.6.2",
+    "@tamagui/toast": "^1.94.4",
+    "burnt": "^0.12.2",
     "expo": "~50.0.7",
+    "expo-font": "~11.10.2",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
+    "tamagui": "1.74.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tamagui/babel-plugin": "1.74.8",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.2.5",
-    "@tamagui/babel-plugin": "1.74.8",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
